# filchat

./: .buildignore  .dockerignore  .gitignore  .htmlvalidate.json  .installignore  Dockerfile  FilChat.spec  README.md  build.sh  filchat-corr  filchat-old.py  filchat.py  filchat.sh  install.sh  main.py  makefile  package-lock.json  pyproject.toml  testmvc.py
config/: __init__.py  settings.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  prod.py
core/: context_processors.py  footer_models.py  models.py  views.py
core/migrations/: 0001_initial.py  0002_custom404page.py  0003_rename_custom404page_customerrorpage.py  0004_custom404page_custom500page.py  0005_custom403page.py
core/templatetags/: custom_filters.py  navigation_tags.py
data/dev/: db.sqlite3
documentation/: user.md  versions.md
filchat/: apps.py  models.py  urls.py  utils.py  views.py
filchat-0.0/: Dockerfile.build  Dockerfile.old  build.sh  filchat.py  filchat.spec  install.sh  main.py
filchat-0.0/filchat/: filchat.py
filchat/controllers/: applicationcontroller.py  processingworker.py
filchat/migrations/: 0001_initial.py  0002_rename_intro_filchatpage_body.py
filchat/models/: chatprocessor.py  processingjob.py
media/uploads/: fodmap_o3Uul0h.txt  sami.txt  vacances.txt
secretbox/: apps.py  context_processors.py  models.py  urls.py  views.py
secretbox/migrations/: 0001_initial.py  0002_secretboxpage_hero_cta_secretboxpage_hero_cta_link_and_more.py
static/css/: custom.css  input-old.css  output.css
staticfiles/css/: input.css
templates/base/: 403.html  404.hmtl  500.html  base.html  (+6 more)
tools/: merge.py
versions/: 0.1.1_FilChat_2026.01.29_linux.7z
(+14 files in other folders)
