[project]
name = "filchat"
version = "0.1.0"
description = "application FilChat"
authors = [
    {name = "Osynia", email = "osynia.devapps@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cookiecutter>=2.6.0",
    "django>=5.2.10",
    "django-compressor>=4.6.0",
    "django-environ>=0.12.0",
    "django-extensions>=4.1",
    "django-tailwind>=4.2.0",
    "pillow>=12.1.0",
    "pyinstaller>=6.17.0",
    "pyside6>=6.10.1",
    "tailwind>=3.1.5b0",
    "wagtail>=7.2.1",
]
